Rollback backend and docs changes
