# backend/src/api.rs
@@ -1,6 +1,6 @@
 pub mod auth;
-pub mod conversationsSvelte;
 pub mod router;
 pub mod health;
 pub mod completions;
 mod jwt;
+mod conversations;
